loopdowhile.LoopDoWhile.scala.code
do {
  avance()
} while (estSurblanc()==false)